# datacollection-server

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
bruno/: googleapi.bru  post-data.bru  post-data2.bru  post-json.bru
src/: main.rs
tests/: upload-tests.sh
